--- a/app/src/main/res/layout/content_discount_details.xml
+++ b/app/src/main/res/layout/content_discount_details.xml
@@ -44,7 +44,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/kfc"
+                        android:background="@drawable/rounded_two"
                         android:layout_weight="3">
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -167,7 +167,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/kfc"
+                        android:background="@drawable/rounded_two"
                         android:layout_weight="3">
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -287,7 +287,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/kfc"
+                        android:background="@drawable/rounded_two"
                         android:layout_weight="3">
                         <LinearLayout
                             android:layout_width="match_parent"
