--- a/app/src/main/res/layout/fragment_discountcard_vendor.xml
+++ b/app/src/main/res/layout/fragment_discountcard_vendor.xml
@@ -118,7 +118,7 @@ android:maxLength="27"
             android:layout_marginTop="3dp"
 
             android:max="5"
-            android:progressBackgroundTint="@color/coloryellow"
+            android:progressBackgroundTint="@color/coloryellows"
             android:progressTint="@color/coloryellow"
             android:rating="5"
             android:scaleX=".5"
