--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorBlack">#000</color>
     <color name="colorWhite">#FFF</color>
     <color name="coloryellow">#e6c314</color>
+    <color name="coloryellows">#e2dcbf</color>
 </resources>
