--- a/app/src/main/res/layout/activity_settings__profile.xml
+++ b/app/src/main/res/layout/activity_settings__profile.xml
@@ -208,6 +208,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -230,6 +235,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -253,6 +263,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
