--- a/app/src/main/res/layout/content_add_discount__vendor.xml
+++ b/app/src/main/res/layout/content_add_discount__vendor.xml
@@ -6,12 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="25dp"
     android:layout_marginLeft="25dp"
+    android:layout_below="@+id/basic_profile_img"
     android:layout_marginRight="25dp">
-    <ScrollView
-        android:layout_marginBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/basic_profile_img"
-        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,7 +22,7 @@
                 android:textColor="#000"
                 android:id="@+id/et_adddiscount_startdate"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:background="@drawable/selector_bg_edit"
                 android:paddingBottom="7dp" />
@@ -37,7 +34,7 @@
                 android:textColor="#000"
                 android:id="@+id/et_adddiscount_enddate"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:background="@drawable/selector_bg_edit"
                 android:paddingBottom="7dp" />
@@ -82,7 +79,7 @@
                 android:textColorHint="@color/colorBlack"
                 android:theme="@style/TextLabel"
                 android:layout_marginLeft="5dp"
-                android:layout_weight="1.4"
+
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp">
@@ -98,31 +95,46 @@
                     android:textCursorDrawable="@drawable/bg_input_cursor"
                     android:paddingBottom="2dp" />
             </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
 
-                android:textColorHint="@color/colorBlack"
-                android:theme="@style/TextLabel"
-                android:layout_marginTop="20dp"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
-                <EditText
-                    android:id="@+id/et_vcomplete_discdesc_s"
-                    android:textSize="16sp"
-                    android:hint="Description"
-                    android:gravity="start"
-                    android:padding="10dp"
-                    android:textColor="#000"
-                    android:lines="3"
-                    android:maxLines="3"
+                android:scrollbars="vertical"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
 
+                    android:textColorHint="@color/colorBlack"
+                    android:theme="@style/TextLabel"
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="text|textMultiLine|textCapSentences"
-                    android:background="@drawable/selector_bg_edit"
-                    android:textCursorDrawable="@drawable/bg_input_cursor"
-                    android:paddingBottom="2dp" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/et_vcomplete_discdesc_s"
+                        android:textSize="16sp"
+                        android:hint="Description"
+                        android:gravity="start"
+                        android:padding="10dp"
+                        android:textColor="#000"
+                        android:lines="6"
+                        android:editable="true"
+                        android:enabled="true"
+                        android:minLines="6"
+                        android:maxLines="6"
+                        android:isScrollContainer="true"
+                        android:focusable="true"
 
+                        android:overScrollMode="always"
+                        android:scrollbarStyle="insideInset"
+                        android:scrollbars="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="text|textMultiLine|textCapSentences"
+                        android:background="@drawable/selector_bg_edit"
+                        android:textCursorDrawable="@drawable/bg_input_cursor"
+                        android:paddingBottom="2dp" />
+
+
+                </android.support.design.widget.TextInputLayout>
+            </ScrollView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -159,5 +171,5 @@
                     android:textColor="@color/colorWhite" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+
 </RelativeLayout>
