--- a/app/src/main/res/layout/content_jobs_user.xml
+++ b/app/src/main/res/layout/content_jobs_user.xml
@@ -95,6 +95,8 @@
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
+                            android:maxLines="4"
+                            android:maxEms="30"
                             android:paddingRight="10dp"
                             android:layout_weight="1"
                             android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
