--- a/app/src/main/res/layout/fragment_bot_nav__discounts.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__discounts.xml
@@ -73,7 +73,7 @@
     </android.support.design.widget.AppBarLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_hoizontal_scroll"
-
+android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/appbar_homescreen"
