--- a/app/src/main/res/layout/content_profile_vendorprofessional.xml
+++ b/app/src/main/res/layout/content_profile_vendorprofessional.xml
@@ -25,18 +25,36 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
+
             <ImageView
                 android:id="@+id/vendor_professional_companylogo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_margin="15dp"
-                android:src= "@drawable/professional_image_upload"/>
-
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="25dp"
+                android:background="@drawable/professional_image_upload" />
+            <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/colorBlack"
+                android:theme="@style/TextLabel"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+                <EditText
+                    android:textSize="16sp"
+                    android:hint="Company Name"
+                    android:id="@+id/vendor_professional_companyname"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:maxLength="8"
+                    android:background="@drawable/selector_bg_edit"
+                    android:textCursorDrawable="@drawable/bg_input_cursor"
+                    android:paddingBottom="2dp" />
+            </android.support.design.widget.TextInputLayout>
                 <TextView
                     android:textSize="16sp"
                     android:text="Category"
                     android:textColor="#000"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
 
                     android:id="@+id/vendor_professional_category"
                     android:layout_width="match_parent"
