new design changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorGray">#a9a9a9</color>
 
     <color name="colorBlack">#000</color>
+    <color name="colorBlacks">#6a000000</color>
     <color name="colorWhite">#FFF</color>
     <color name="coloryellow">#e6c314</color>
     <color name="coloryellows">#e2dcbf</color>
