--- a/app/src/main/res/layout/fragment_bot_nav__events.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events.xml
@@ -24,41 +24,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/homescreen_filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentStart="true"
-                    android:background="@drawable/home_filter"
-                    android:backgroundTint="@color/colorHintss" />
 
-                <EditText
-                    android:id="@+id/homescreen_search"
-                    android:layout_width="230dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_toEndOf="@+id/homescreen_filter"
-                    android:background="@drawable/editext_lightborder_unsel"
-                    android:backgroundTint="@color/colorHintss"
-                    android:drawableLeft="@drawable/ic_search_black_24dp"
-                    android:gravity="start"
-                    android:hint="Search"
-                    android:padding="4dp"
-                    android:textColor="@color/colorBlack"
-                    android:textColorHint="@color/colorHints" />
-
-                <ImageView
-                    android:id="@+id/homescreen_nav"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_alignTop="@+id/homescreen_notification"
-                    android:layout_marginStart="9dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/homescreen_search"
-                    android:background="@drawable/ic_near_me_black_24dp"
-                    android:backgroundTint="@color/colorHintss" />
 
                 <ImageView
                     android:id="@+id/homescreen_notification"
@@ -73,14 +39,57 @@
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="10dp"
+
+        android:id="@+id/events_hlist_layout"
+        android:layout_below="@+id/appbar_homescreen"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/dashboard_button_u_events"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:text="Events"
+            android:padding="8dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/but_selected"/>
+        <Button
+            android:id="@+id/dashboard_button_u_news"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:text="News"
+            android:padding="8dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/but_selected"/>
+    </LinearLayout>
     <ImageView
-        android:id="@+id/IV_noitem_disc"
+        android:id="@+id/IV_noitem_events"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:visibility="invisible"
         android:layout_below="@+id/appbar_homescreen"
 
         android:background="@drawable/event_noitems_images"
+        />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/events_user_listview"
+        android:divider="@android:color/transparent"
+        android:layout_below="@+id/events_hlist_layout"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="6dp"
         />
 
     <com.github.clans.fab.FloatingActionMenu
@@ -90,9 +99,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:paddingRight="10dp"
-        android:paddingBottom="10dp"
+        android:paddingBottom="50dp"
         android:paddingLeft="10dp"
-
         fab:menu_fab_size="normal"
         fab:menu_showShadow="true"
         fab:menu_shadowColor="#66000000"
