--- a/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent"    xmlns:fab="http://schemas.android.com/apk/res-auto"
+
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.weqar.weqar.Fragments.BotNav_EventsFragment">
 
@@ -57,15 +59,47 @@
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="10dp"
+
+
+        android:id="@+id/events_hlist_layout"
+        android:layout_below="@+id/appbar_homescreen"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/But_dash_v_events"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:text="Events"
+            android:padding="8dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/but_selected"/>
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="36dp"-->
+            <!--android:text="News"-->
+            <!--android:padding="8dp"-->
+            <!--android:layout_margin="2dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:background="@drawable/but_selected"/>-->
+    </LinearLayout>
     <ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/events_vendor_listview"
-    android:divider="@android:color/transparent"
-    android:layout_below="@+id/appbar_homescreen"
-    android:padding="3dp"
-    android:layout_margin="6dp"
-    />
+        android:divider="@android:color/transparent"
+        android:layout_below="@+id/events_hlist_layout"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="6dp"/>
 
     <ImageView
         android:id="@+id/IV_noitem_disc"
@@ -73,8 +107,100 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_below="@+id/appbar_homescreen"
-
+        android:visibility="invisible"
         android:background="@drawable/event_noitems_images"
         />
 
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/menu_red"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:paddingRight="10dp"
+        android:paddingBottom="50dp"
+        android:paddingLeft="10dp"
+
+        fab:menu_fab_size="normal"
+        fab:menu_showShadow="true"
+        fab:menu_shadowColor="#66000000"
+        fab:menu_shadowRadius="4dp"
+        fab:menu_shadowXOffset="1dp"
+        fab:menu_shadowYOffset="3dp"
+        fab:menu_colorNormal="@color/colorPrimaryDark"
+        fab:menu_colorPressed="@color/colorPrimary"
+        fab:menu_colorRipple="#99FFFFFF"
+        fab:menu_animationDelayPerItem="50"
+        fab:menu_icon="@drawable/fab_add"
+        fab:menu_buttonSpacing="0dp"
+        fab:menu_labels_margin="0dp"
+        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+        fab:menu_labels_paddingTop="6dp"
+        fab:menu_labels_paddingRight="10dp"
+        fab:menu_labels_paddingBottom="6dp"
+        fab:menu_labels_paddingLeft="10dp"
+        fab:menu_labels_padding="10dp"
+        fab:menu_labels_textColor="#09331b"
+        fab:menu_labels_textSize="14sp"
+        fab:menu_labels_cornerRadius="6dp"
+        fab:menu_labels_colorNormal="#ffffff"
+        fab:menu_labels_colorPressed="#444444"
+        fab:menu_labels_colorRipple="#66FFFFFF"
+        fab:menu_labels_showShadow="true"
+        fab:menu_labels_singleLine="false"
+        fab:menu_labels_ellipsize="none"
+        fab:menu_labels_maxLines="-1"
+        fab:menu_labels_position="left"
+        fab:menu_openDirection="up"
+        fab:menu_backgroundColor="#d9000000"
+
+        >
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_rss_feed"
+            fab:fab_size="mini"
+            fab:menu_shadowYOffset="3dp"
+            fab:menu_colorNormal="#13b167"
+            fab:menu_colorPressed="#1caf68"
+            fab:menu_colorRipple="#99FFFFFF"
+            fab:fab_label="News"
+            style="@style/MenuButtonsStyle" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_redeem"
+            fab:fab_size="mini"
+            fab:menu_colorNormal="#13b167"
+            fab:menu_colorPressed="#1caf68"
+            style="@style/MenuButtonsStyle"
+            fab:fab_label="Event"
+            fab:menu_labels_colorNormal="#ffffff"
+            />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_loyalty"
+            fab:fab_size="mini"
+            style="@style/MenuButtonsStyle"
+            fab:fab_label="Discount" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_card_travel"
+            fab:fab_size="mini"
+            style="@style/MenuButtonsStyle"
+
+            fab:fab_label="Job" />
+
+
+    </com.github.clans.fab.FloatingActionMenu>
 </RelativeLayout>
