new design changes

--- a/app/src/main/res/layout/activity_news__display.xml
+++ b/app/src/main/res/layout/activity_news__display.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
-                    android:id="@+id/events_u_addevent"
+                    android:id="@+id/news_u_addnews"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_centerVertical="true"
@@ -34,7 +34,7 @@
                     android:background="@drawable/ic_add_black_24dp" />
 
                 <ImageView
-                    android:id="@+id/events_u_back"
+                    android:id="@+id/news_u_back"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentStart="true"
@@ -46,20 +46,11 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_marginEnd="65dp"
-                    android:text="Events"
+                    android:text="News"
                     android:layout_centerInParent="true"
                     android:textColor="@color/colorHint"
                     android:textSize="22sp" />
 
-                <!--<ImageView-->
-                <!--android:id="@+id/event_addevent_vendor"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="30dp"-->
-
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_marginEnd="11dp"-->
-                <!--android:layout_toStartOf="@+id/homescreen_notification"-->
-                <!--android:background="@drawable/ic_add_black_24dp" />-->
 
 
                 <ImageView
@@ -79,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/appbar_events_user"
-        android:id="@+id/events_user_list"
+        android:id="@+id/news_user_list"
         android:layout_marginTop="10dp"
         android:layout_marginRight="6dp"
         android:layout_marginLeft="6dp"
