--- a/app/src/main/res/layout/fragment_bot_nav__events.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events.xml
@@ -39,35 +39,35 @@
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="10dp"
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingLeft="5dp"-->
+        <!--android:paddingRight="5dp"-->
+        <!--android:paddingTop="10dp"-->
 
-        android:id="@+id/events_hlist_layout"
-        android:layout_below="@+id/appbar_homescreen"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/dashboard_button_u_events"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:text="Events"
-            android:padding="8dp"
-            android:layout_margin="2dp"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/but_selected"/>
-        <Button
-            android:id="@+id/dashboard_button_u_news"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:text="News"
-            android:padding="8dp"
-            android:layout_margin="2dp"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/but_selected"/>
-    </LinearLayout>
+        <!--android:id="@+id/events_hlist_layout"-->
+        <!--android:layout_below="@+id/appbar_homescreen"-->
+        <!--android:orientation="horizontal">-->
+        <!--<Button-->
+            <!--android:id="@+id/dashboard_button_u_events"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="36dp"-->
+            <!--android:text="Events"-->
+            <!--android:padding="8dp"-->
+            <!--android:layout_margin="2dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:background="@drawable/but_selected"/>-->
+        <!--<Button-->
+            <!--android:id="@+id/dashboard_button_u_news"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="36dp"-->
+            <!--android:text="News"-->
+            <!--android:padding="8dp"-->
+            <!--android:layout_margin="2dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:background="@drawable/but_selected"/>-->
+    <!--</LinearLayout>-->
     <ImageView
         android:id="@+id/IV_noitem_events"
         android:layout_width="match_parent"
@@ -78,12 +78,38 @@
 
         android:background="@drawable/event_noitems_images"
         />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_below="@+id/appbar_homescreen"
+android:id="@+id/dashboard_fab_layout"
+        android:layout_marginTop="5dp"
+        android:layout_height="wrap_content">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/dashboard_button_u_events"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/fab_margin"
+        android:layout_alignParentStart="true"
+        app:srcCompat="@drawable/event_float" />
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:id="@+id/dashboard_button_u_news"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/fab_margin"
+        app:srcCompat="@drawable/news_float" />
+    </RelativeLayout>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/events_user_listview"
         android:divider="@android:color/transparent"
-        android:layout_below="@+id/events_hlist_layout"
+        android:layout_below="@+id/dashboard_fab_layout"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
         android:layout_marginBottom="60dp"
@@ -91,6 +117,7 @@
         android:layout_marginRight="6dp"
         android:layout_marginTop="6dp"
         />
+
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/menu_red"
@@ -111,7 +138,8 @@
         fab:menu_colorPressed="@color/colorPrimary"
         fab:menu_colorRipple="#99FFFFFF"
         fab:menu_animationDelayPerItem="50"
-        fab:menu_icon="@drawable/fab_add"
+        fab:menu_icon="@drawable/filter_home"
+
         fab:menu_buttonSpacing="0dp"
         fab:menu_labels_margin="0dp"
         fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
@@ -171,15 +199,7 @@
             fab:fab_size="mini"
             style="@style/MenuButtonsStyle"
             fab:fab_label="Discount" />
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/fab4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_card_travel"
-            fab:fab_size="mini"
-            style="@style/MenuButtonsStyle"
 
-            fab:fab_label="Job" />
 
 
     </com.github.clans.fab.FloatingActionMenu>
